imagen agregada, funcion modificada, mojora front-end

--- a/index.html
+++ b/index.html
@@ -34,11 +34,16 @@
                 <button type="submit" value="" onclick="copiar()" class="boton_aparte">Copiar</button>
             </div>
 
+            <div class="textoSobreBoton">
+                <img src="imagenes/Vector.png">
+                <p>solo letras minpusculas y sin acentos</p>
+            </div>
+            
             <div class="botonesEnDes">
                 <button type="submit" value="" onclick="textoEncriptado()">
                     <p>encriptar</p></button>
                 <button type="submit" value="" onclick="textoDesencriptado()">
-                    <p>encriptar</p></button>
+                    <p>desencriptar</p></button>
                 
             </div>
         </main>
