--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>ᛥ►Encriptador◄ᛥ</title>
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="style.css">
@@ -36,7 +36,7 @@
 
             <div class="textoSobreBoton">
                 <img src="imagenes/Vector.png">
-                <p>solo letras minpusculas y sin acentos</p>
+                <p>solo letras minúsculas y sin acentos</p>
             </div>
             
             <div class="botonesEnDes">
